@@ -117,8 +117,13 @@
 			<version>0.21.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>se.simonsoft</groupId>
+			<artifactId>cms-backend-svnkit</artifactId>
+			<version>3.2.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -126,7 +131,11 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire-plugin.version}</version>
                 <configuration>
-                    <argLine>-Dtest.solr.allowed.securerandom=NativePRNG</argLine>
+                    <argLine>
+						-Dtest.solr.allowed.securerandom=NativePRNG
+						<!-- Needed for Java 17 compatibility. -->
+						--add-opens java.base/java.lang=ALL-UNNAMED
+					</argLine>
                 </configuration>
             </plugin>
             <plugin>
